fixed text breaking out of container

--- a/react-app/src/components/Business/BusinessDetail/BusinessDetail.css
+++ b/react-app/src/components/Business/BusinessDetail/BusinessDetail.css
@@ -127,6 +127,7 @@
   border-top: none;
   padding-top: 0;
   padding: 16px 0px;
+  word-wrap: break-word !important;
 }
 
 .business-website a {
